--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "node-fetch-cjs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "dependencies": {
     "node-fetch": "^3.0.0"
   },
+  "scripts": {
+    "build": "./build.js",
+    "postinstall": "patch-package"
+  },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@types/fs-extra": "^9.0.12",
-    "@types/node": "^16.9.1",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^16.10.2",
     "fs-extra": "^10.0.0",
-    "rollup": "^2.56.3"
+    "patch-package": "^6.4.7",
+    "rollup": "^2.58.0"
   },
   "prettier": {
     "arrowParens": "avoid",
