--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "node-fetch-cjs",
   "version": "0.1.1",
   "dependencies": {
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.1.0"
   },
   "scripts": {
     "build": "./build.js",
     "postinstall": "patch-package"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.10.2",
